--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-tj21",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "src/server.ts",
   "scripts": {
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/server.ts"
   },
