--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "/(.*)",
-        "use": "@vercel/node"
+        "src": "src/server.ts",
+        "use": "@now/node"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "src/server.ts"
       }
     ]
   }
